 ! (Experience) The XP values of fish are now based on their rarity and have been drastically changed
 ! (Item) Improved some of the messages sent to the player regarding the Chimaera Wing
 ! (Party) Party member list will only include members of the party that you can see (aren't vanished)
 ! (Skills) Some skill level rank requirements have changed
 ! (Skills) Fixed an edge case bug where Blast Mining wouldn't inform the player that it was on cooldown
 ! (Skills) mcMMO skills will now be on a scale from 1-100 instead of 0-1000 (for existing mcMMO installs this is opt-in and off by default)
 ! (Skills) Skill Super Powers are now unlockabled skills, unlocking at level 10
 ! (Skills) Acrobatics' Roll exploit detection was tweaked to still allow for Roll to trigger even if it rewards no XP
 ! (Skills) Acrobatics' Roll & Gracefull Roll are now considered the same skill (both mechanics are still there)
 ! (Skills) Woodcutting's Double Drop subskill is now named Harvest Lumber
 ! (Skills) Archery's Skill Shot now uses a rank system
 ! (Skills) Axe's Axe Mastery now uses a rank system
 ! (Skills) Axe's Impact now uses a rank system
 ! (Skills) Herbalism's Farmer's Diet now uses a rank system
 ! (Skills) Herbalism's Green Thumb now uses a rank system
 ! (Config) Unarmed.IronArm in advanced.yml is now Unarmed.IronArmStyle
 ! (Config) Unarmed.Deflect in advanced.yml is now Unarmed.ArrowDeflect
 ! (Config) Swords.Counter in advanced.yml is now Swords.CounterAttack
 ! (Config) Archery.Retrieve in advanced.yml is now Archery.ArrowRetrieval
 ! (Config) Axes.CriticalHit in advanced.yml is now Axes.CriticalStrikes
 ! (Config) Archery's Skill Shot now uses RankDamageMultiplier for its damage bonus calculations
 ! (Config) Axe's Axe mastery now uses RankDamageMultiplier for its damage bonus calculations
 ! (Permissions) Replaced the old Double Drop permission node for woodcutting with a new Harvest Lumber permission node