@@ -39,12 +39,12 @@ public enum SubSkillType {
     FISHING_SHAKE,
 
     /* Herbalism */
-    HERBALISM_FARMERS_DIET,
-    HERBALISM_GREEN_THUMB,
+    HERBALISM_FARMERS_DIET(5),
+    HERBALISM_GREEN_THUMB(4),
     HERBALISM_DOUBLE_DROPS,
     HERBALISM_HYLIAN_LUCK,
     HERBALISM_SHROOM_THUMB,
-    HERBALISM_GREEN_TERRA,
+    HERBALISM_GREEN_TERRA(1),
 
     /* Mining */
     MINING_DOUBLE_DROPS,
